fix- about overlay automatically displays when displaying on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -409,4 +409,7 @@ body{
   #moreAbout div{
     font-size: .7em
   }
+  .aboutOverlay{
+      opacity: 1;
+  }
 }
